# p643_project

./: .gitignore  CMakeLists.txt  README
config/: .logging.cfg.swp  logging.cfg  params.cfg
include/: Cell.h  Collider.h  CollisionPartnersGenerator.h  Grid.h  PostCollisionVelocitiesGenerator.h  Simulator.h  Space.h  collisions.h  constants.h  distribution.h  interpolation.h
src/: Cell.cpp  Collider.cpp  CollisionPartnersGenerator.cpp  Grid.cpp  PostCollisionVelocitiesGenerator.cpp  Simulator.cpp  collisions.cpp  distribution.cpp  interpolation.cpp  main.cpp  simulate.cpp
test/: collisionPartnersGenerationTest.cpp  interpolationTest.cpp  velocityPlotTest.cpp
